# excel2config

./: README.md  pyproject.toml
examples/: Excel2Config_Example-1.xlsx
examples/OUTPUTS_Excel2Config_Example-1_20220717-232924/: leaf1.txt  leaf2.txt  leaf3.txt  leaf4.txt  leaf5.txt
examples/OUTPUTS_Excel2Config_Example-1_20220901-014333/: leaf1.txt  leaf2.txt  leaf3.txt  leaf4.txt  leaf5.txt
examples/OUTPUTS_Excel2Config_Example-1_20230220-003951/: leaf1.txt  leaf2.txt  leaf3.txt  leaf4.txt  leaf5.txt
excel2config/: excel2config.py
src/excel2config/: __init__.py  excel2config.py
